Fix conection db for enviroment

--- a/.env.local
+++ b/.env.local
@@ -11,6 +11,7 @@ DB_PORT=5432
 DB_USERNAME=postgres
 DB_PASSWORD=maodev2024
 DB_NAME=test-payment
+DB_SSL=false
 
 #PAYMENT PLATFORM
 URL_PAYMENT=https://api-sandbox.co.uat.wompi.dev
